# serializer version: 1
# name: TestLinearPairwiseComputeMatrix.test_compute_matrix_default[event]
  '''
  ,1,2,3,4,5,6,7,8,9,10
  1,0.0,1.0,0.9091,1.0,1.0,1.0,1.0,1.0,1.0,1.0
  2,1.0,0.0,1.0,0.9091,0.875,0.9231,0.8571,1.0,1.0,1.0
  3,0.9091,1.0,0.0,0.9091,1.0,1.0,0.8571,0.875,1.0,0.9091
  4,1.0,0.9091,0.9091,0.0,0.9091,1.0,1.0,1.0,1.0,1.0
  5,1.0,0.875,1.0,0.9091,0.0,1.0,0.8571,1.0,1.0,1.0
  6,1.0,0.9231,1.0,1.0,1.0,0.0,0.8571,1.0,0.8571,1.0
  7,1.0,0.8571,0.8571,1.0,0.8571,0.8571,0.0,1.0,1.0,1.0
  8,1.0,1.0,0.875,1.0,1.0,1.0,1.0,0.0,0.8571,1.0
  9,1.0,1.0,1.0,1.0,1.0,0.8571,1.0,0.8571,0.0,0.8571
  10,1.0,1.0,0.9091,1.0,1.0,1.0,1.0,1.0,0.8571,0.0
  
  '''
# ---
# name: TestLinearPairwiseComputeMatrix.test_compute_matrix_default[interval]
  '''
  ,1,2,3,4,5,6,7,8,9,10
  1,0.0,1.0,1.0,1.0,1.0,1.0,1.0,1.0,1.0,1.0
  2,1.0,0.0,1.0,1.0,1.0,1.0,1.0,1.0,0.75,1.0
  3,1.0,1.0,0.0,1.0,1.0,1.0,1.0,1.0,1.0,1.0
  4,1.0,1.0,1.0,0.0,1.0,1.0,1.0,0.8333,1.0,1.0
  5,1.0,1.0,1.0,1.0,0.0,0.8333,1.0,1.0,1.0,1.0
  6,1.0,1.0,1.0,1.0,0.8333,0.0,1.0,1.0,1.0,1.0
  7,1.0,1.0,1.0,1.0,1.0,1.0,0.0,1.0,1.0,0.6667
  8,1.0,1.0,1.0,0.8333,1.0,1.0,1.0,0.0,1.0,1.0
  9,1.0,0.75,1.0,1.0,1.0,1.0,1.0,1.0,0.0,1.0
  10,1.0,1.0,1.0,1.0,1.0,1.0,0.6667,1.0,1.0,0.0
  
  '''
# ---
# name: TestLinearPairwiseComputeMatrix.test_compute_matrix_default[state]
  '''
  ,1,2,3,4,5,6,7,8,9,10
  1,0.0,1.0,1.0,1.0,1.0,1.0,1.0,1.0,0.5,0.5
  2,1.0,0.0,1.0,1.0,1.0,1.0,1.0,1.0,1.0,1.0
  3,1.0,1.0,0.0,1.0,1.0,1.0,1.0,1.0,1.0,0.5
  4,1.0,1.0,1.0,0.0,1.0,1.0,1.0,1.0,1.0,1.0
  5,1.0,1.0,1.0,1.0,0.0,1.0,1.0,1.0,0.5,1.0
  6,1.0,1.0,1.0,1.0,1.0,0.0,1.0,1.0,1.0,1.0
  7,1.0,1.0,1.0,1.0,1.0,1.0,0.0,1.0,1.0,1.0
  8,1.0,1.0,1.0,1.0,1.0,1.0,1.0,0.0,1.0,1.0
  9,0.5,1.0,1.0,1.0,0.5,1.0,1.0,1.0,0.0,1.0
  10,0.5,1.0,0.5,1.0,1.0,1.0,1.0,1.0,1.0,0.0
  
  '''
# ---
# name: TestLinearPairwiseComputeMatrix.test_compute_matrix_with_padding_penalty[event]
  '''
  ,1,2,3,4,5,6,7,8,9,10
  1,0.0,1.0,0.9231,1.0,1.0,1.0,1.0,1.0,1.0,1.0
  2,1.0,0.0,1.0,0.9375,0.8889,0.9375,0.9375,1.0,1.0,1.0
  3,0.9231,1.0,0.0,0.9231,1.0,1.0,0.9231,0.9231,1.0,0.9231
  4,1.0,0.9375,0.9231,0.0,0.9444,1.0,1.0,1.0,1.0,1.0
  5,1.0,0.8889,1.0,0.9444,0.0,1.0,0.9444,1.0,1.0,1.0
  6,1.0,0.9375,1.0,1.0,1.0,0.0,0.9231,1.0,0.9231,1.0
  7,1.0,0.9375,0.9231,1.0,0.9444,0.9231,0.0,1.0,1.0,1.0
  8,1.0,1.0,0.9231,1.0,1.0,1.0,1.0,0.0,0.875,1.0
  9,1.0,1.0,1.0,1.0,1.0,0.9231,1.0,0.875,0.0,0.9091
  10,1.0,1.0,0.9231,1.0,1.0,1.0,1.0,1.0,0.9091,0.0
  
  '''
# ---
# name: TestLinearPairwiseComputeMatrix.test_compute_matrix_with_padding_penalty[interval]
  '''
  ,1,2,3,4,5,6,7,8,9,10
  1,0.0,1.0,1.0,1.0,1.0,1.0,1.0,1.0,1.0,1.0
  2,1.0,0.0,1.0,1.0,1.0,1.0,1.0,1.0,0.8333,1.0
  3,1.0,1.0,0.0,1.0,1.0,1.0,1.0,1.0,1.0,1.0
  4,1.0,1.0,1.0,0.0,1.0,1.0,1.0,0.8571,1.0,1.0
  5,1.0,1.0,1.0,1.0,0.0,0.8571,1.0,1.0,1.0,1.0
  6,1.0,1.0,1.0,1.0,0.8571,0.0,1.0,1.0,1.0,1.0
  7,1.0,1.0,1.0,1.0,1.0,1.0,0.0,1.0,1.0,0.75
  8,1.0,1.0,1.0,0.8571,1.0,1.0,1.0,0.0,1.0,1.0
  9,1.0,0.8333,1.0,1.0,1.0,1.0,1.0,1.0,0.0,1.0
  10,1.0,1.0,1.0,1.0,1.0,1.0,0.75,1.0,1.0,0.0
  
  '''
# ---
# name: TestLinearPairwiseComputeMatrix.test_compute_matrix_with_padding_penalty[state]
  '''
  ,1,2,3,4,5,6,7,8,9,10
  1,0.0,1.0,1.0,1.0,1.0,1.0,1.0,1.0,0.5,0.5
  2,1.0,0.0,1.0,1.0,1.0,1.0,1.0,1.0,1.0,1.0
  3,1.0,1.0,0.0,1.0,1.0,1.0,1.0,1.0,1.0,0.6667
  4,1.0,1.0,1.0,0.0,1.0,1.0,1.0,1.0,1.0,1.0
  5,1.0,1.0,1.0,1.0,0.0,1.0,1.0,1.0,0.5,1.0
  6,1.0,1.0,1.0,1.0,1.0,0.0,1.0,1.0,1.0,1.0
  7,1.0,1.0,1.0,1.0,1.0,1.0,0.0,1.0,1.0,1.0
  8,1.0,1.0,1.0,1.0,1.0,1.0,1.0,0.0,1.0,1.0
  9,0.5,1.0,1.0,1.0,0.5,1.0,1.0,1.0,0.0,1.0
  10,0.5,1.0,0.6667,1.0,1.0,1.0,1.0,1.0,1.0,0.0
  
  '''
# ---
